--- a/Assignments/Feng_A04_DataWrangling.Rmd
+++ b/Assignments/Feng_A04_DataWrangling.Rmd
@@ -25,7 +25,7 @@ The completed exercise is due on Tuesday, February 4 at 1:00 pm.
 
 2. Explore the dimensions, column names, and structure of the datasets. 
 
-```{r, message = FALSE}
+```{r message=FALSE}
 
 #1
 getwd()
@@ -82,34 +82,23 @@ class(EPAPM25_2$Date)
 EPAPM25_2$Date <- as.Date(EPAPM25_2$Date, format = "%m/%d/%Y")
 class(EPAPM25_2$Date)
 
-```
-
-```{r}
 #4
 library(dplyr)
 
 EPAo3_1Select <-select(EPAo3_1, Date, DAILY_AQI_VALUE, Site.Name, AQS_PARAMETER_DESC, COUNTY, SITE_LATITUDE, SITE_LONGITUDE)
-EPAo3_1Select
 
 EPAo3_2Select <-select(EPAo3_2, Date, DAILY_AQI_VALUE, Site.Name, AQS_PARAMETER_DESC, COUNTY, SITE_LATITUDE, SITE_LONGITUDE)
-EPAo3_2Select
 
 EPAPM25_1Select <-select(EPAPM25_1, Date, DAILY_AQI_VALUE, Site.Name, AQS_PARAMETER_DESC, COUNTY, SITE_LATITUDE, SITE_LONGITUDE)
-EPAPM25_2Seelect 
 
 EPAPM25_2Select <-select(EPAPM25_2, Date, DAILY_AQI_VALUE, Site.Name, AQS_PARAMETER_DESC, COUNTY, SITE_LATITUDE, SITE_LONGITUDE)
-EPAPM25_2Select 
-```
 
-```{r}
-#5  what does "fill" mean? replce??
+#5
 EPAPM25_1.AQS_PARAMETER <- replace(EPAPM25_1Select,4,"PM2.5")
-EPAPM25_1.AQS_PARAMETER
-EPAPM25_2.AQS_PARAMETER <- replace(EPAPM25_2Select,4,"PM2.5")
-EPAPM25_2.AQS_PARAMETER
-```
 
-```{r}
+EPAPM25_2.AQS_PARAMETER <- replace(EPAPM25_2Select,4,"PM2.5")
+
+
 #6
 write.csv(EPAo3_1Select, row.names = FALSE, 
           file ="./Data/Processed/EPAair_O3_NC2018_processed.csv")
@@ -123,7 +112,6 @@ write.csv(EPAPM25_1.AQS_PARAMETER, row.names = FALSE,
 write.csv(EPAPM25_2.AQS_PARAMETER, row.names = FALSE, 
           file ="./Data/Processed/EPAair_PM25_NC2019_processed.csv")
 ```
-
 ## Combine datasets
 7. Combine the four datasets with `rbind`. Make sure your column names are identical prior to running this code. 
 8. Wrangle your new dataset with a pipe function (%>%) so that it fills the following conditions: 
@@ -138,6 +126,7 @@ write.csv(EPAPM25_2.AQS_PARAMETER, row.names = FALSE,
 11. Save your processed dataset with the following file name: "EPAair_O3_PM25_NC1718_Processed.csv"
 
 ```{r}
+#7
 dim(EPAo3_1Select)
 dim(EPAo3_2Select)
 dim(EPAPM25_1.AQS_PARAMETER)
@@ -145,9 +134,7 @@ dim(EPAPM25_2.AQS_PARAMETER)
 
 EPAair.18.19.slected <- rbind(EPAo3_1Select, EPAo3_2Select, EPAPM25_1.AQS_PARAMETER, EPAPM25_2.AQS_PARAMETER)
 dim(EPAair.18.19.slected)
-```
 
-```{r}
 #8
 EPAair.18.19.slected_Processed <- 
   EPAair.18.19.slected %>%
@@ -164,35 +151,6 @@ EPAair.18.19.slected_Processed <-
   select(Date, Month, Year, Site.Name:meanLONG)
 dim(EPAair.18.19.slected_Processed)
 
- ## sepereat Steps
-EPAair.18.19.slected_SiteName <- 
-  EPAair.18.19.slected %>%
-  filter(Site.Name %in%  c("Linville Falls", "Durham Armory", "Leggett", "Hattie Avenue", 
-                           "Clemmons Middle", "Mendenhall School", "Frying Pan Mountain", 
-                           "West Johnston Co.", "Garinger High School", "Castle Hayne", 
-                           "Pitt Agri. Center", "Bryson City", "Millbrook School"))
-dim(EPAair.18.19.slected_SiteName)
-
-EPAair.18.19.slected_Mean<-group_by(EPAair.18.19.slected_SiteName,
-                                    Date,Site.Name,AQS_PARAMETER_DESC,COUNTY) %>%
-  dplyr::summarise(meanAQI = mean(DAILY_AQI_VALUE), 
-            meanLAT = mean(SITE_LATITUDE),
-            meanLONG = mean(SITE_LONGITUDE))
-dim(EPAair.18.19.slected_Mean)
-
-EPAair.18.19.slected_Mean$Year <- year(ymd(EPAair.18.19.slected_Mean$Date))
-EPAair.18.19.slected_Mean$Month <- month(ymd(EPAair.18.19.slected_Mean$Date)) 
-EPAair.18.19.slected_Mean    
-dim(EPAair.18.19.slected_Mean)
-
-EPAair.18.19.slected_MonthYearReorder<-select(EPAair.18.19.slected_Mean, Date, Month, 
-                                              Year, Site.Name:meanLONG)
-dim(EPAair.18.19.slected_MonthYearReorder)
-
-
-```
-
-```{r}
 #9
 EPAair.18.19.slected.spread <- spread(EPAair.18.19.slected_Processed, AQS_PARAMETER_DESC,meanAQI )
 
@@ -203,9 +161,6 @@ dim(EPAair.18.19.slected.spread)
 write.csv(EPAair.18.19.slected.spread, row.names = FALSE, 
           file ="./Data/Processed/EPAair_O3_PM25_NC1718_Processed.csv")
 ```
-
-
-
 ## Generate summary tables
 12. Use the split-apply-combine strategy to generate a summary data frame. Data should be grouped by site, month, and year. Generate the mean AQI values for ozone and PM2.5 for each group. Then, add a pipe to remove instances where a month and year are not available (use the function `drop_na` in your pipe). 
 
