--- a/Lessons/09_DataVisualization.Rmd
+++ b/Lessons/09_DataVisualization.Rmd
@@ -47,7 +47,7 @@ print(O3plot1)
 
 O3plot2 <- ggplot(EPAair) +
   geom_point(aes(x = Date, y = Ozone)) +
-  theme_bw()
+  theme_bw()  #theme is background
 print(O3plot2)
 
 O3plot3 <- ggplot(EPAair) +
@@ -57,7 +57,7 @@ print(O3plot3)
 
 O3plot4 <- ggplot(EPAair) +
   geom_point(aes(x = Date, y = Ozone)) +
-  theme_classic()
+  theme_classic() #bakeground no grid
 print(O3plot4)
 ```
 
@@ -71,17 +71,17 @@ If you would like to set a common theme across all plots in your analysis sessio
 
 ```{r, fig.height = 3, fig.width = 4, warning = FALSE}
 mytheme <- theme_classic(base_size = 14) +
-  theme(axis.text = element_text(color = "black"), 
+  theme(axis.text = element_text(color = "DarkBlue"), 
         legend.position = "top") #alternative: legend.position + legend.justification
 
 # options: call the theme in each plot or set the theme at the start. 
 
 O3plot5 <- ggplot(EPAair) +
   geom_point(aes(x = Date, y = Ozone)) +
-  mytheme
+  mytheme  # setting on above (seperate)
 print(O3plot5)  
 
-theme_set(mytheme)
+theme_set(mytheme) #all the plot gonna be this theme and do not add the theme in plot code
 
 O3plot6 <- ggplot(EPAair) +
   geom_point(aes(x = Date, y = Ozone))
@@ -94,17 +94,18 @@ print(O3plot6)
 While the theme allows us to set multiple aspects of plots, ggplot allows us to adjust other parts of plots outside of the theme. 
 
 ```{r, fig.height = 3, fig.width = 4, warning = FALSE}
-O3plot7 <- ggplot(EPAair, aes(x = Date, y = Ozone)) +
-  geom_hline(yintercept = 50, lty = 2) +
+O3plot7 <- ggplot(EPAair, aes(x = Date, y = Ozone)) + # add layers below
+  geom_hline(yintercept = 50, lty = 2) +   # horizational line
   geom_hline(yintercept = 100, lty = 2) +
-  geom_point(alpha = 0.5, size = 1.5) +
+  geom_point(alpha = 0.5, size = 1.5) + #ggplot does thing in order, the point gonna be below than line
+                                        #alpha = 0.5,transparent 50%
   geom_text(x = as.Date("2020-01-01"), y = 45, label = "good", hjust = 1, fontface = "bold") +
   geom_text(x = as.Date("2020-01-01"), y = 95, label = "moderate", hjust = 1, fontface = "bold") +
   geom_text(x = as.Date("2020-01-01"), y = 120, label = "unhealthy (sensitive groups)", hjust = 1, fontface = "bold") +
-  scale_x_date(limits = as.Date(c("2018-01-01", "2019-12-31")), 
-    date_breaks = "2 months", date_labels = "%b %y") +
-  ylab(expression("O"[3]* " AQI Value")) +
-  theme(axis.text.x = element_text(angle = 45,  hjust = 1))
+  scale_x_date(limits = as.Date(c("2018-01-01", "2019-12-31")),  #change the data scale
+    date_breaks = "2 months", date_labels = "%b %y") +  #date_labels is re-format 
+  ylab(expression("O"[3]* " AQI Value")) +  #[3] is subscript
+  theme(axis.text.x = element_text(angle = 45,  hjust = 1)) #angle = 45 is 45% degrees
 print(O3plot7)  
 
 ```
@@ -152,9 +153,9 @@ nationalparkcolors (package)
 * https://github.com/katiejolly/nationalparkcolors
 
 ```{r, warning = FALSE}
-# install.packages("viridis")
-# install.packages("RColorBrewer")
-# install.packages("colormap")
+install.packages("viridis")
+install.packages("RColorBrewer")
+install.packages("colormap")
 library(viridis)
 library(RColorBrewer)
 library(colormap)
@@ -174,11 +175,14 @@ print(NvsP)
 # change your legend labels
 NvsP2 <-
   ggplot(PeterPaul.chem.nutrients, aes(x = tp_ug, y = tn_ug, color = depth, shape = lakename)) +
-  geom_point(alpha = 0.7, size = 2.5) +
-  #labs() + # change your legend labels here
-  scale_shape_manual(values = c(15, 17)) +
-  #scale_color_distiller(palette = "Blues", direction = 1) + # use scale_color_brewer for discrete variables
-  scale_color_viridis(option = "magma", direction = -1) +
+  geom_point(alpha = 0.7, size = 2.5) +  # aparency and poit size
+  labs(x=expression(paste("TP(",mu,"g/L)"))) + # change your legend labels here #mu greek number
+  labs(y=expression(paste("TN(",mu,"g/L)")))+
+  labs(color="depth(m)")+ #color is for the legend
+  scale_shape_manual(values = c(15, 17)) +  # google R shapes, it is  points symbols 
+  scale_color_distiller(palette = "Blues", direction = 1) + # use scale_color_brewer for discrete variables
+  #scale_color_viridis(option = "magma", direction = -1, end=0.8) + #direction=-1: color from light to dark
+                                                                   #end=0.8 Change the gray value at the low and the high ends of the palette
   theme(legend.position = "right", 
         legend.text = element_text(size = 12), legend.title = element_text(size = 12))
 print(NvsP2)
@@ -190,6 +194,10 @@ print(NvsP2)
 Nutrientplot <-
   ggplot(PeterPaul.chem.nutrients.gathered, aes(x = lakename, y = concentration, color = nutrient)) +
   geom_boxplot() +
+  labs(x=expression(paste("concentration (mg/L"))) + # change your legend labels here
+  labs(y=expression(paste(".")))+
+  scale_color_manual(labels = c("NH34", "NO23","PO4","TN","YP"),
+                     values = c("#7fcdbb", "#41b6c4", "#1d91c0", "#225ea8", "#0c2c84"))+
 # place your additional edits here
   scale_y_continuous(expand = c(0, 0)) +
   #scale_color_brewer(palette = "YlGnBu") +
